# avro-cli-test

./: .gitignore  README.md  config.yaml  pyproject.toml
src/avro_cli/: __init__.py  avro_tools.py  commands.py  config.py  idl_commands.py  state.py  trial.py
src/avro_cli/parser/: avdl_reader.py
