[project]
name = "avro-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ninad Tungare", email = "ninad.tungare@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "avro>=1.12.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "strictyaml>=1.7.3",
    "typer>=0.21.0",
]

[project.scripts]
avro-cli = "avro_cli:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
